fixed overflow

--- a/app/styles/styl/_config.styl
+++ b/app/styles/styl/_config.styl
@@ -57,9 +57,11 @@ body
 	min-width 320px
 	position relative
 
-html, body
-	height 100%
-	width 100%
-	margin 0
-  	overflow-x hidden
-	padding 0
+
+html, body {
+  overflow-x hidden
+  height 100%
+  width 100%
+  margin 0
+  padding 0
+}
